Style fixed. inputs with digitals have  right align

--- a/app/content/css/main.css
+++ b/app/content/css/main.css
@@ -2406,4 +2406,7 @@ textarea {
 .bausparvertrag {
     width: 66%;
 }
+.priv input{
+    text-align: right;
+}
 
